5 html page create
pain

--- a/home.html
+++ b/home.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Style.css">
 </head>
-<h3>This is my First Assignment  for thi course</h3>
+<h2>This is Home Page</h2>
+<h3>This is my First Assignment  for this course</h3>
 <body>
+    <header>
+        <nav>
+          <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="About.html">Page 2</a></li>
+            <li><a href="Contact.html">Page 3</a></li>
+            <li><a href="Emergency_Contact.html">Page 4</a></li>
+            <li><a href="Product.html">Page 5</a></li>
+          </ul>
+        </nav>
+      </header>
+
 
     
 </body>
