paragraph and image add

--- a/Contact.html
+++ b/Contact.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+    <h3>Contact Us</h3>
+
     <header>
         <nav>
           <ul>
@@ -17,6 +20,9 @@
           </ul>
         </nav>
       </header>
+    <img src="Figure_3.png" alt="">
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi sed error perferendis repellendus magni ex tempore reiciendis harum consectetur, omnis vero consequatur neque laudantium voluptatum molestias explicabo illum iusto similique?</p>
+
     
 </body>
 </html>
