--- a/Emergency_Contact.html
+++ b/Emergency_Contact.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h3>Emergency Contact informatiomn</h3>
     <header>
         <nav>
           <ul>
@@ -17,6 +18,13 @@
           </ul>
         </nav>
       </header>
+    <p>Your safety is our top priority. In case of an emergency, please use the following contact details to reach us immediately:
+
+        Emergency Phone Number:
+        01731755887
+        
+        Email for Urgent Inquiries:
+        [meheduhasan2272002@gmail.com]</p>
     
 </body>
 </html>
