--- a/Product.html
+++ b/Product.html
@@ -12,10 +12,10 @@
         <nav>
           <ul>
             <li><a href="home.html">Home</a></li>
-            <li><a href="About.html">Page 2</a></li>
-            <li><a href="Contact.html">Page 3</a></li>
-            <li><a href="Emergency_Contact.html">Page 4</a></li>
-            <li><a href="Product.html">Page 5</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="Emergency_Contact.html">Emergency_Contact</a></li>
+            <li><a href="Product.html">product</a></li>
           </ul>
         </nav>
       </header>
