--- a/Emergency_Contact.html
+++ b/Emergency_Contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <h3>Emergency Contact informatiomn</h3>
@@ -25,6 +26,7 @@
         
         Email for Urgent Inquiries:
         [meheduhasan2272002@gmail.com]</p>
+    <img src="Figure_5.jpeg" alt="Figure_5">
     
 </body>
 </html>
