--- a/Product.html
+++ b/Product.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
           <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="About.html">About</a></li>
             <li><a href="Contact.html">Contact</a></li>
             <li><a href="Emergency_Contact.html">Emergency_Contact</a></li>
