--- a/Product.html
+++ b/Product.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
+  <div class="grid-container">
     <h3>view Our products</h3>
     <header>
         <nav>
@@ -21,11 +22,13 @@
       </header>
     <p>Introducing Chair
 
-        Discover Chair, the ultimate solution designed to [solve a specific problem or meet a particular need]. Engineered with precision and crafted for excellence, [Product Name] offers [highlight key features or benefits], ensuring that you get the performance and results you deserve.
+        Discover Chair, the ultimate solution designed to [solve a specific problem or meet a particular need]. Engineered with precision and crafted for excellence, Chair offers  key features or benefits, ensuring that you get the performance and results you deserve.
+        <br>
         
         Whether you’re looking to [specific benefit: enhance productivity, simplify processes, improve comfort, etc.], Chair has been thoughtfully designed to meet your needs with [mention any unique qualities like innovation, durability, ease of use]. Backed by our commitment to quality and customer satisfaction, it’s the perfect tool to [specific action or outcome].
-        
-        Experience the future of [product category] with Chair, and take your [business, lifestyle, etc.] to the next level.</p>
+        <br>
+        Experience the future of   Chair, and take your business, lifestyle, etc. to the next level.</p>
     <img src="Figure_4.jpg" alt="Figure_4">
+  </div>
 </body>
 </html>
