--- a/index.html
+++ b/index.html
@@ -6,23 +6,31 @@
     <title>Document</title>
     <link rel="stylesheet" href="Style.css">
 </head>
-<h2>This is Home Page</h2>
-<h3>This is my First Assignment  for this course</h3>
+
 <body>
+  <div class='container'>
     <header>
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="Emergency_Contact.html">Emergency_Contact</a></li>
-            <li><a href="Product.html">product</a></li>
-          </ul>
-        </nav>
-      </header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="About.html">About</a></li>
+          <li><a href="Contact.html">Contact</a></li>
+          <li><a href="Emergency_Contact.html">Emergency_Contact</a></li>
+          <li><a href="Product.html">product</a></li>
+        </ul>
+      </nav>
+    </header>
+    <h2>This is Home Page</h2>
+    <h3>This is my First Assignment for this course</h3><br><br>
   
-    <p>we’re dedicated to delivering innovative solutions that drive success for our clients. With a commitment to excellence and a focus on customer satisfaction, we provide [specific services/products] that are tailored to meet the unique needs of businesses across</p>
+    <p>we’re dedicated to delivering innovative solutions that drive success for our clients. With a commitment to
+      excellence and a focus on customer satisfaction, we provide [specific services/products] that are tailored to meet
+      the unique needs of businesses across</p>
     <img src="Figure_1.jpg" alt="Figure_1">
+    <br>
+    <p><b>this is my official home Page</b></p>
+    <img src="homepage2.png" alt="homepage2">
+  </div>
 
 
     
