--- a/About.html
+++ b/About.html
@@ -7,18 +7,20 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
+  <div class="navbar">
     <h3>About US</h3>
     <header>
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="Emergency_Contact.html">Emergency_Contact</a></li>
-            <li><a href="Product.html">product</a></li>
-          </ul>
-        </nav>
-      </header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="About.html">About</a></li>
+          <li><a href="Contact.html">Contact</a></li>
+          <li><a href="Emergency_Contact.html">Emergency_Contact</a></li>
+          <li><a href="Product.html">product</a></li>
+        </ul>
+      </nav>
+    </header>
+  </div>
     <img src="Figure_2.jpeg" alt="Figure_2">
     <p>About Our Business</p>
     <p>Customer-Centric Approach
