--- a/index.html
+++ b/index.html
@@ -19,18 +19,22 @@
           <li><a href="Product.html">product</a></li>
         </ul>
       </nav>
-    </header>
+    </header><br>
+  </div>
     <h2>This is Home Page</h2>
     <h3>This is my First Assignment for this course</h3><br><br>
   
     <p>we’re dedicated to delivering innovative solutions that drive success for our clients. With a commitment to
       excellence and a focus on customer satisfaction, we provide [specific services/products] that are tailored to meet
       the unique needs of businesses across</p>
+  <div class="image_home">
     <img src="Figure_1.jpg" alt="Figure_1">
+  </div>  
     <br>
-    <p><b>this is my official home Page</b></p>
+    <p><b>this is my official home Page</b></p><br>
+  <div class="image_2">
     <img src="homepage2.png" alt="homepage2">
-  </div>
+  </div>  
 
 
     
