--- a/Contact.html
+++ b/Contact.html
@@ -8,9 +8,10 @@
 </head>
 
 <body>
-    <h3>Contact Us</h3>
+    
 
-    <header>
+    <div class='container'>
+      <header>
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -20,9 +21,11 @@
             <li><a href="Product.html">product</a></li>
           </ul>
         </nav>
-      </header>
+      </header><br>
+    </div>
+    <h3>Contact Us</h3>
     <img src="Figure_3.png" alt="">
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi sed error perferendis repellendus magni ex tempore reiciendis harum consectetur, omnis vero consequatur neque laudantium voluptatum molestias explicabo illum iusto similique?</p>
+    <p>At MH__business, your satisfaction is our top priority. Whether you have a question, need assistance, or just want to share feedback, we're always happy to hear from you. Feel free to reach out through the form below, and our dedicated team will get back to you as soon as possible.</p>
 
     
 </body>
