--- a/Product.html
+++ b/Product.html
@@ -8,8 +8,10 @@
 </head>
 <body>
   <div class="grid-container">
-    <h3>view Our products</h3>
-    <header>
+
+    
+    <div class='container'>
+      <header>
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -19,7 +21,9 @@
             <li><a href="Product.html">product</a></li>
           </ul>
         </nav>
-      </header>
+      </header><br>
+    </div>
+    <h3>view Our products</h3>
     <p>Introducing Chair
 
         Discover Chair, the ultimate solution designed to [solve a specific problem or meet a particular need]. Engineered with precision and crafted for excellence, Chair offers  key features or benefits, ensuring that you get the performance and results you deserve.
