--- a/About.html
+++ b/About.html
@@ -8,20 +8,26 @@
 </head>
 <body>
   <div class="navbar">
-    <h3>About US</h3>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="About.html">About</a></li>
-          <li><a href="Contact.html">Contact</a></li>
-          <li><a href="Emergency_Contact.html">Emergency_Contact</a></li>
-          <li><a href="Product.html">product</a></li>
-        </ul>
-      </nav>
-    </header>
+    
+    <div class='container'>
+      <header>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="Emergency_Contact.html">Emergency_Contact</a></li>
+            <li><a href="Product.html">product</a></li>
+          </ul>
+        </nav>
+      </header><br>
+    </div>
+
   </div>
+  <h3>About Us</h3>
+  <div class="about____image">
     <img src="Figure_2.jpeg" alt="Figure_2">
+  </div>
     <p>About Our Business</p>
     <p>Customer-Centric Approach
         We prioritize our clients' needs, striving to exceed expectations by providing tailored solutions that drive tangible results. Your success is at the heart of everything we do.
